--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4326,6 +4326,10 @@ input[type=button].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
+  background-image: url(../img/back.jpg);
+  /* no repetir imagen de fondo */
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
@@ -4383,6 +4387,7 @@ input[type=button].btn-block {
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
+
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
@@ -9770,7 +9775,8 @@ button.bg-dark:focus {
 }
 
 .font-weight-light {
-  font-weight: 300 !important;
+  font-weight: 600 !important;
+  color: white;
 }
 
 .font-weight-lighter {
@@ -10023,7 +10029,8 @@ body {
 }
 #layoutAuthentication #layoutAuthentication_content {
   min-width: 0;
-  flex-grow: 1;  
+  flex-grow: 1;
+  background-color: white;
 }
 #layoutAuthentication #layoutAuthentication_footer {
   min-width: 0;
